force-app/main/default/objects/OrderInvoiceRelationship__c/OrderInvoiceRelationship__c.object-meta.xml
<CustomObject>
    <description>Junction object that ties an Invoice record to its related Order.</description>
    <label>Order/Invoice Relationship</label>
    <nameField>
        <label>Order/Invoice Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order/Invoice Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>