force-app/main/default/objects/OrderInvoiceRelationship__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <formula>Invoice__r.InvoiceDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>