force-app/main/default/objects/OrderInvoiceRelationship__c/fields/InvoiceLines__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLines__c</fullName>
    <formula>Invoice__r.Lines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Line Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>