force-app/main/default/objects/OrderInvoiceRelationship__c/fields/InvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatus__c</fullName>
    <formula>Invoice__r.RecordStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status</label>
    <type>Text</type>
</CustomField>