force-app/main/default/objects/OrderInvoiceRelationship__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <formula>SalesOrder__r.RecordStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>