force-app/main/default/objects/OrderInvoiceRelationship__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Order/Invoice Relationships</relationshipLabel>
    <relationshipName>Related_Invoices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>