force-app/main/default/objects/OrderInvoiceRelationship__c/fields/SalesOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderAmount__c</fullName>
    <formula>SalesOrder__r.TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>